# tatou

./: .gitignore  README.md  docker-compose.yml  flag  get_rmap.py  old.txt  pyproject.toml  pytest.ini  requirements-mutation.txt  requirements.txt  rmap_client.sh  sample.env  setup.cfg  test.txt  test_rmap_http.py
.venv311/: pyvenv.cfg
Mutation/: requirements.txt
mini-mut/: setup.cfg
mini-mut/tests/: test_mathops.py
mutation_artifacts/: README.txt  interesting_mutants.txt  mutatest_run.txt  mutatest_run_after_fix.txt  selected_mutants.csv
mutation_artifacts/after/: test_wm_logic_after.txt  wm_logic_after.txt
mutation_artifacts/before/: test_wm_logic_before.txt  wm_logic_before.txt
server/: Dockerfile  __init__.py  entrypoint.sh  flag  get_rmap.py  pyproject.toml
server/api_tests/: test_api.py
server/fuzz/: README.md  conftest.py  old.txt  payloads.py  pytest.ini  requirments.txt  test_fuzz_api.py  test_regression_api.py
server/keys/: server_public.asc
server/keys/clients/: Alice.asc  Alice_private.asc  Group_05.asc  Group_07.asc  Group_10.asc  Group_11.asc  Group_16.asc  Group_18.asc  Jean.asc  (+1 more)
server/src/: Mathewos_method.py  Theo_method.py  add_after_eof.py  server.py  unsafe_bash_bridge_append_eof.py  valdemar_method.py  watermarking_cli.py  watermarking_method.py  watermarking_utils.py
server/test/: conftest.py  mutmut_test_runner.py  old.txt  test_api.py  test_mutmut_tripwire.py  test_rmap_http.py  test_watermarking_all_methods.py  test_watermarking_wrappers.py
tests/: conftest.py
tests/mutation_testing/: test_mathewos_method.py
(+6 files in other folders)
