[project]
name = "tatou-server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"

dependencies = [
    "PyMuPDF>=1.21.1",
    "Flask==3.0.3",
    "gunicorn==21.2.0",
    "PyMySQL==1.1.2",
    "SQLAlchemy==2.0.43",
    "dill==0.4.0",
    "rmap @ https://github.com/nharrand/RMAP-Server/releases/download/v2.0.0/rmap-2.0.0-py3-none-any.whl"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mutmut>=2.4.0"
]

# -------------------------
# Pytest configuration
# -------------------------

# -------------------------
# (Optional) scripts
# -------------------------
[project.scripts]
pdfwm = "watermarking_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
